# Jurassic-Park-Game

./: .gitignore  AlanKids.h  CMakeLists.txt  Character.cpp  Character.h  Ellie.h  Intro.cpp  Nedry.h  README.md  a.out  intro.h  main.cpp
header/: AlanKids.h  Character.h  Ellie.h  IanHammond.h  MiniGame.h  Nedry.h  Story.h
src/: AlanKids.cpp  Character.cpp  Ellie.cpp  IanHammond.cpp  MiniGame.cpp  Nedry.cpp  Story.cpp  main.cpp
test/: MiniGameTest.cpp
